[package]
name = "mutil"
version = "0.1.0"
authors = ["Titus Tienaah <titus.intdxdt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robust_determinant  = { git = "https://github.com/intdxdt/robust_determinant", branch = "master" }