[package]
name = "math-util"
version = "0.1.0"
authors = ["Titus Tienaah <titus.intdxdt@gmail.com>"]
edition = "2018"

[dependencies]
robust_determinant  = { git = "https://github.com/intdxdt/robust_determinant", branch = "master" }
bs-num  = { git = "https://github.com/intdxdt/bs-num", branch = "master" }